--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -252,7 +252,7 @@
                 -->
                 <div class="col-lg-4 col-lg-offset-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:your-email@your-domain.com"> philip.corr@ucdconnect.ie</a><a href="mailto:your-email@your-domain.com"> gavin.heaney@ucdconnect.ie</a></p>
+                    <p><a href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:philip.corr@ucdconnect.ie"> philip.corr@ucdconnect.ie</a><a href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a></p>
                 </div>
             </div>
         </div>
