--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,6 +13,8 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link rel="stylesheet" type="text/css" href="css/custom.css">-->
+    
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -43,22 +45,26 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Return to Top of Page</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Apply Filters</a>
                     </li>
+                    <!--
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
+                    
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
+                        <a class="page-scroll" href="#portfolio">Recipe Images</a>
+                    </li> 
+                    -->
                     <li>
+
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -73,98 +79,116 @@
             <div class="panel panel-default">
               <div class="panel-body text-primary"></div>
                 <div class="header-content-inner text-primary">
+                    
                     <h1 id="homeHeading">Recipe Recommending Application</h1>
                     <hr>
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
-                </div>
-        </div>
-    </header>
-
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
-                    <hr class="primary">
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Start you recipe search!</a>
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Build a Shopping List!</a>
                 </div>
             </div>
         </div>
+    </header>
+
+    <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
-                    </div>
+                <div class="form-group">
+                  <label for="sel1">Food Type:</label>
+                  <select class="form-control" id="sel1">
+                    <option>Italian</option>
+                    <option>American</option>
+                    <option>Chinese</option>
+                    <option>Indian</option>
+                    <option>Irish</option>
+                    <option>Mexican</option>
+                  </select>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-                    </div>
+                <div class="form-group">
+                  <label for="sel1">Dietary Needs (hold ctrl or shift (or drag with the mouse) to select more than one):</label>
+                 <select multiple class="form-control" id="sel2">
+                    <option>Vegetarian</option>
+                    <option>Vegan</option>
+                    <option>Coeliac</option>
+                    <option>Lactose Intolerant</option>
+                    <option>Nut Allergy</option>
+                  </select>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
+                <div class="form-group">
+                  <label for="sel1">Ingredients:</label>
+                 <select multiple class="form-control" id="sel2">
+                    <option>Chicken</option>
+                    <option>Beef</option>
+                    <option>Mince</option>
+                    <option>Carrots</option>
+                    <option>Potato</option>
+                    <option>Bell Peppers</option>
+                    <option>Rice</option>
+                    <option>Cheese</option>
+                    <option>Tomatoes</option>
+                    <option>Lettuce</option>
+                  </select>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
-                    </div>
+                <!--
+                <div class="dropdown">
+                  <button class="btn btn-default dropdown-menu-toggle" type="button" id="menu1"  data-toggle="dropdown">Food Type 
+                  <span class="caret" width="100%"></span></button>
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                    <li role="presentation"><a role="menuitem" href="/american">American</a></li>
+                    <li role="presentation"><a role="menuitem" href="/italian">Italian</a></li>
+                    <li role="presentation"><a role="menuitem" href="/mexican">Mexian</a></li>
+                    <li role="presentation"><a role="menuitem" href="/chinese">Chinese</a></li>-->
+                    <!--<li role="presentation" class="divider"></li>
+                    <li role="presentation"><a role="menuitem" href="#">About Us</a></li> -->
+                  </ul>
                 </div>
+
             </div>
         </div>
     </section>
 
+
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/italian.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/italian.jpg" class="img-responsive" alt="">
+            <div class="row no-gutter ">
+                <div class="col-lg-4 col-sm-6 center-block">
+                    <a href="/italian" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/italian.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     Italian
                                 </div>
-								<div class="project-category text-faded">
+                                <div class="project-name">
                                     Click here to view Italian Recipes
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/american.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/american.jpg" class="img-responsive" alt="">
+                <div class="col-lg-4 col-sm-6 center-block">
+                    <a href="/american" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/american.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     American
                                 </div>
-								<div class="project-category text-faded" href="/american">
+                                <div class="project-name">
                                     Click here to view American Recipes
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/chinese.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/chinese.jpg" class="img-responsive" alt="">
+                <div class="col-lg-4 col-sm-6 center-block">
+                    <a href="/chinese" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/chinese.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-name" href="/chinese">
+                                <div class="project-category text-faded">
                                     Chinese
                                 </div>
-								<div class="project-category text-faded">
+                                <div class="project-name">
                                     Click here to view Chinese Recipes
                                 </div>
                             </div>
@@ -172,14 +196,14 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/indian.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/indian.jpg" class="img-responsive" alt="">
+                    <a href="/indian" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/indian.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     Indian
                                 </div>
-								<div class="project-category text-faded">
+                                <div class="project-name">
                                     Click here to view Indian Recipes
                                 </div>
                             </div>
@@ -187,29 +211,29 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/irisj.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/irish.jpg" class="img-responsive" alt="">
+                    <a href="/irish" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/Irish.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     Irish
                                 </div>
-								<div class="project-category text-faded">
-                                    Click here to view Irish Recipes
+                                <div class="project-name">
+                                   Click here to view Irish Recipes
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/mexican.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/mexican.jpg" class="img-responsive" alt="">
+                    <a href="/mexican" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/mexican.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-name">
+                                <div class="project-category text-faded">
                                     Mexican
                                 </div>
-								<div class="project-category text-faded">
+                                <div class="project-name">
                                     Click here to view Mexican Recipes
                                 </div>
                             </div>
@@ -221,7 +245,6 @@
     </section>
 
 
-
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -230,9 +253,15 @@
                     <hr class="primary">
                     <p>This application was created by Engineering students for the module COMP41670 - Software Engineering</p>
                 </div>
+                <!-- 
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <p>123-456-6789</p>
+                </div>
+                -->
                 <div class="col-lg-4 col-lg-offset-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:your-email@your-domain.com"> philip.corr@ucdconnect.ie</a><a href="mailto:your-email@your-domain.com"> gavin.heaney@ucdconnect.ie</a></p>
+                    <p><a href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:philip.corr@ucdconnect.ie"> philip.corr@ucdconnect.ie</a><a href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a></p>
                 </div>
             </div>
         </div>
