--- a/views/pages/recipes.ejs
+++ b/views/pages/recipes.ejs
@@ -80,7 +80,7 @@
                     
                     <h1 id="homeHeading">Recipe Recommending Application</h1>
                     <hr>
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">See <%= recipe_type%> Recipes</a>
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">See <%=recipe_type%> Recipes</a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                         <ul>
                             <% if (recipeTitles.length > 0) { %>
                                 <%    for (i=0; i< recipeTitles.length; i++){ %>
-                                        <a href= <%=recipeTitles[i].replace(/\s/g,"-")%> class="list-group-item"><%= recipeTitles[i]%></a>
+                                        <a href= <%=recipeTitles[i].replace(/\s/g,"-").replace(/,/g,"")%> class="list-group-item"><%= recipeTitles[i]%></a>
                                 <%    } %>
                             <%    } %>
                         </ul>
@@ -110,50 +110,6 @@
         </div>
     </section>
 
-     <!-- 
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    -->
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
@@ -163,7 +119,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Recipe
                                 </div>
                                 <div class="project-name">
                                     <%=recipeTitles[0]%>
@@ -277,7 +233,7 @@
                 -->
                 <div class="col-lg-4 col-lg-offset-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:your-email@your-domain.com"> philip.corr@ucdconnect.ie</a><a href="mailto:your-email@your-domain.com"> gavin.heaney@ucdconnect.ie</a></p>
+                    <p><a href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:philip.corr@ucdconnect.ie"> philip.corr@ucdconnect.ie</a><a href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a></p>
                 </div>
             </div>
         </div>
